--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Ceres Admin</title>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=6GE3RB9TS0gj5kh8u5enWhHwFAy8EqGO"></script>
   </head>
   <body>
     <!-- 文件自动注入到 #app 中 -->
