--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>logo-03.png" />
-    <title>Ceres Admin</title>
+    <link rel="icon" href="<%= BASE_URL %>404_cloud.png" />
+    <title>票据管理平台</title>
   </head>
   <body>
     <!-- 文件自动注入到 #app 中 -->
